<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.com.codesa.productoscodesa.presentacion.fragments.Producto.Producto2Fragment">

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:background="@color/colorAccent"
        android:text="@string/finalizar" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fbAddImagenesPrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_insert_photo_black_18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/producto"
            android:textSize="@dimen/fontTitle"
            android:textStyle="bold|italic" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtPrecioCompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio_compra"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtPrecioVenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/precio_venta"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spTipo"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
