<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/producto1Coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.com.codesa.productoscodesa.presentacion.fragments.Producto.Producto1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/producto"
            android:textSize="@dimen/fontTitle"
            android:textStyle="bold|italic" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtRegistroCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/codigo"
                android:inputType="textAutoComplete" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtRegistroNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textAutoComplete" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtFechaVencimiento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/btnCalendarFechaVenc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:src="@drawable/ic_date_range_black_18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtFechaPrd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:enabled="false"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/btnCalendarFechaPrd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:src="@drawable/ic_date_range_black_18dp" />

        </LinearLayout>


        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.87"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSiguienteProducto1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:background="@color/colorAccent"
        android:text="@string/siguiente" />

</android.support.design.widget.CoordinatorLayout>
